[gd_scene load_steps=12 format=3 uid="uid://bdfcg20nyh2yc"]

[ext_resource type="Script" path="res://Menu.gd" id="1_8u1em"]
[ext_resource type="Theme" uid="uid://qho5kbeok0m6" path="res://resources/main_menu_buttons.tres" id="2_cvqu3"]
[ext_resource type="Texture2D" uid="uid://cx510vsl7hfu6" path="res://assets/Level/Other/logo.png" id="3_u8bvo"]
[ext_resource type="Texture2D" uid="uid://dnb0x73n5m7fi" path="res://assets/Level/Other/snowman.png" id="4_8b3m4"]
[ext_resource type="Texture2D" uid="uid://d2s6clm37w56c" path="res://assets/Level/Goblin/Goblin-grapplegun-pickup.png" id="5_1jhoc"]
[ext_resource type="Texture2D" uid="uid://bl4ofskdlqj3e" path="res://assets/Level/Goblin/Goblin-jump.png" id="5_3g1h6"]
[ext_resource type="Texture2D" uid="uid://bkcshn27xq0uk" path="res://assets/Level/Goblin/knight.png" id="6_r7cwy"]
[ext_resource type="Texture2D" uid="uid://bk2rm8iy3gihg" path="res://assets/Level/Other/crown.png" id="6_sttv8"]
[ext_resource type="AudioStream" uid="uid://diy1wb36uhrhe" path="res://assets/SFX/button.wav" id="7_bim68"]

[sub_resource type="SystemFont" id="SystemFont_r5rs4"]

[sub_resource type="LabelSettings" id="LabelSettings_dqyaa"]
font = SubResource("SystemFont_r5rs4")
font_size = 96
font_color = Color(0.376471, 0.701961, 0.145098, 1)
outline_size = 10
outline_color = Color(0.431373, 0.431373, 0.431373, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.69, 0.69)
script = ExtResource("1_8u1em")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
modulate = Color(0.286275, 0.286275, 0.286275, 1)
layout_mode = 2
offset_left = -81.0
offset_top = -64.0
offset_right = 2336.0
offset_bottom = 1261.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 551.0
offset_top = 53.0
offset_right = 1303.0
offset_bottom = 755.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("2_cvqu3")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.129412, 0.541176, 0.313726, 1)
theme_override_font_sizes/font_size = 98
text = "Grapple Goblin"
label_settings = SubResource("LabelSettings_dqyaa")
horizontal_alignment = 1

[node name="Continue" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
text = "Continue"

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
text = "New Game"

[node name="LevelSelect" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
text = "Level Select"

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(246.377, 837.681)
scale = Vector2(8.125, 8.125)
texture = ExtResource("3_u8bvo")

[node name="loser" type="Node" parent="."]

[node name="Goblinjump" type="Sprite2D" parent="loser"]
position = Vector2(179, 263)
scale = Vector2(3.95836, 3.95836)
texture = ExtResource("5_3g1h6")

[node name="winner" type="Node" parent="."]

[node name="goblin" type="Sprite2D" parent="winner"]
position = Vector2(152, 266)
scale = Vector2(5.98453, 5.98453)
texture = ExtResource("5_1jhoc")

[node name="Crown" type="Sprite2D" parent="winner/goblin"]
position = Vector2(1.34247, -33.338)
scale = Vector2(1.2622, 1.2622)
texture = ExtResource("6_sttv8")

[node name="Snowman" type="Sprite2D" parent="."]
position = Vector2(1560.87, 353.623)
scale = Vector2(10.0625, 10.0625)
texture = ExtResource("4_8b3m4")

[node name="Knight" type="Sprite2D" parent="."]
position = Vector2(1511.59, 715.942)
scale = Vector2(3.42188, 3.42188)
texture = ExtResource("6_r7cwy")

[node name="ButtonSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_bim68")

[node name="AudioListener2D" type="AudioListener2D" parent="."]

[connection signal="pressed" from="MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LevelSelect" to="." method="_on_level_select_pressed"]
